# bio-x_ecell-practice

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_getting_started.ipynb  02_srna_silencing.ipynb  03_translation_readout.ipynb  04_catalytic_vs_stoichiometric.ipynb  05_consumption_vs_recycling.ipynb  06_hfq_robustness.ipynb  07_hfq_setpoint.ipynb  08_srna_competition.ipynb  09_partnered_vs_unpartnered.ipynb  10_cotranscriptional.ipynb  11_active_exchange.ipynb  12_active_cycling.ipynb  13_autoregulation.ipynb  14_fabmos.ipynb
official/: README.md  o10_egfr_rulebased.ipynb  o1_simple_equilibrium.ipynb  o2_lotka_volterra.ipynb  o3_dual_phosphorylation.ipynb  o4_attractors.ipynb  o5_drosophila_clock.ipynb  o6_action_potential.ipynb  o7_tyson_cell_cycle.ipynb  o8_glycolysis_mca.ipynb  o9_unit_system.ipynb
scripts/: 01_reversible_reaction.py  03_translation_readout.py  04_catalytic_vs_stoichiometric.py  06_hfq_robustness.py  08_srna_competition.py  11_active_exchange.py  12_active_cycling.py  13_autoregulation.py
solutions/: 01_solutions.ipynb  02_solutions.ipynb  03_solutions.ipynb  04_solutions.ipynb  05_solutions.ipynb  06_solutions.ipynb  07_solutions.ipynb  08_solutions.ipynb  09_solutions.ipynb  10_solutions.ipynb  11_solutions.ipynb  12_solutions.ipynb  13_solutions.ipynb  14_solutions.ipynb  README.md
