[project]
name = "ecell-practice"
version = "0.1.0"
description = "E-Cell4 practice: reaction-network modeling with deterministic (ODE) and stochastic (Gillespie) solvers"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ecell4>=1.2.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pint>=0.25.3",
]
